Release 1.2.4 revive hardening